# flask-rest-api

./: .gitignore  pyproject.toml  requirements.txt
flask_rest_api/: app.py  db.sqlite
tests/: test_flask_rest_api.py
