[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = ""
authors = ["Luis Carlos <luiscarlosfirminopinheiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.3"
flask-marshmallow = "^0.12.0"
marshmallow-sqlalchemy = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
